[project]
name = "python-streamlit-library-manager"
version = "1.2.0"
description = "A library manager app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.3",
    "psycopg2-binary==2.9.10",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "types-psycopg2>=2.9.21.20250121",
]
